# poc-privacy-preserving-voc-data

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00-playground.ipynb  01-text-pre-processing.ipynb  03-app-prototype.ipynb  nb01-np-text-masking.ipynb
