[project]
name = "poc-privacy-preserving-voc-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.33.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "protobuf>=6.31.1",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "termcolor>=3.1.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
